Don't create parent directory on download if not specified